@@ -40,7 +40,6 @@
        <getter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></getter>
        <setter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></setter>
     </property>
-
     <property>
        <type>String</type>
        <name>factoryClassLocation</name>
